# llm-chat-web

./: LICENSE  README.md  chat.py  ecosystem-https.config.js  ecosystem.config.js  iframe.html  main.py  pyproject.toml  run-server-debug.sh  run-server-production-https.sh  run-server-production.sh
assets/gpt3-chatbots/: diet-001.yml  diet-002.yml  diet-003.yml  diet-004.yml  exercise-001.yml  exercise-002.yml  exercise-003.yml  exercise-004.yml  sleep-001.yml  sleep-002.yml  sleep-003.yml  sleep-004.yml  work-001.yml  work-002.yml  work-003.yml  work-004.yml
backend/: server.py
backend/routers/: chat.py  utils.py
chatbot/: chat_session_manager.py  chatbot.py  generator.py
chatbot/generators/: gpt3_generator.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.scss  App.tsx  index.css  index.scss  tailwind.config.js  types.ts
frontend/src/components/: ChatPanel.tsx  ChatbotPlayground.tsx  ConfigPanel.tsx
frontend/src/components/common/: ComboBox.tsx  Section.tsx  TooltipIndicator.tsx
frontend/src/sections/: AboutSection.tsx  AckSection.tsx  PublicationSection.tsx  UserStudySection.tsx
