[tool.poetry]
name = "llm-chat-web"
version = "0.1.0"
description = "LLM-driven chatbot framework"
authors = ["Young-Ho Kim <yghokim@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
openai = "^0.25.0"
python-dotenv = "^0.21.0"
pyyaml = "^6.0"
reactivex = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
